Implementing base functionality of the project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <script type="text/javascript" src="./logic.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="nav">
+        <label for="searchBox">Where is your current location?</label>
+        <input type="text" id="search">
+        <button onclick="fetchWeather()">Refresh</button>
+    </div>
+
+    <div class="weather">
+        <div class="weather-info">
+            <div class="weather-icon">
+                <img src="" alt="">
+            </div>
+            <div class="weather-location">
+                <p>Location: </p>
+                <p id="place"></p>
+            </div>
+            <div class="weather-temp">
+                <p>Temperature:</p>
+                <p id="temp"></p>
+            </div>
+            <div class="weather-desc">
+                <p>Description:</p>
+                <p id="desc"></p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
