Implementing style of the page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav">
         <label for="searchBox">Where is your current location?</label>
         <input type="text" id="search">
-        <button onclick="fetchWeather()">Refresh</button>
+        <button onclick="fetchWeather()">Search</button>
     </div>
 
     <div class="weather">
@@ -21,15 +21,12 @@
                 <img src="" alt="">
             </div>
             <div class="weather-location">
-                <p>Location: </p>
                 <p id="place"></p>
             </div>
             <div class="weather-temp">
-                <p>Temperature:</p>
                 <p id="temp"></p>
             </div>
             <div class="weather-desc">
-                <p>Description:</p>
                 <p id="desc"></p>
             </div>
         </div>
